configure for tailwind v4.0

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,21 @@
 @import "tailwindcss";
+@tailwind utilities;
+
+@theme {
+    --color-whitetext: #FFFFFF;
+    --color-darktext: #212529;
+    --color-purpletext: #8338EC;
+    --color-purplebg: #DDD2FF;
+    --color-yellowbg: #F7BC30;
+    --color-yellowtext: #FFBE0B;
+    --color-orangebg: #FB5607;
+    --color-orangetext: #FD9A6A;
+    --color-pinkbg: #FF006E;
+    --color-pinktext: #FF66A8;
+    --color-redtext: #FA4D4D;
+    --color-bluebg: #3A86FF;
+    --color-bluetext: #89B6FF;
+}
 
 @font-face {
   font-family: 'FredokaOne';
