Configure fonts and colors in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --color-darktext: #212529;
   --color-purpletext: #8338EC;
   --color-purplebg: #DDD2FF;
+  --color-purplehover: #A78AE6;
   --color-yellowbg: #F7BC30;
   --color-yellowtext: #FFBE0B;
   --color-orangebg: #FB5607;
