--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   --color-purpletext: #8338EC;
   --color-purplebg: #DDD2FF;
   --color-purplehover: #A78AE6;
-  --color-yellowbg: #F7BC30;
+  --color-yellowbg: #FFD86D;
   --color-yellowtext: #FFBE0B;
   --color-orangebg: #FB5607;
   --color-orangetext: #FD9A6A;
@@ -25,6 +25,7 @@
   --color-redtext: #FA4D4D;
   --color-bluebg: #3A86FF;
   --color-bluetext: #89B6FF;
+  --color-greentext: #08A508;
   --font-firago: "FiraGo", "sans-serif";
   --font-fredoka: "FredokaOne", "sans-serif"
 }
